--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,25 +1,32 @@
-* {
-  box-sizing: border-box;
-}
-input {
-  border: none;
-  outline: none;
-  padding: 0;
-  &:focus {
+.create_box {
+  * {
+    box-sizing: border-box;
+  }
+
+  input {
+    border: none;
     outline: none;
+    padding: 0;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  button {
+    margin: 0;
+    padding: 0;
+    border: 1px solid #dcdfe6;
+    color: #606266;
+    background-color: transparent;
+
+    &:focus-visible {
+      outline: 2px solid #c8c9cc;
+      outline-offset: 1px;
+    }
   }
 }
-button {
-  margin: 0;
-  padding: 0;
-  border: 1px solid #dcdfe6;
-  color: #606266;
-  background-color: transparent;
-  &:focus-visible {
-    outline: 2px solid #c8c9cc;
-    outline-offset: 1px;
-  }
-}
+
 @import './dialog.less';
 @import './input.less';
 @import './create.less';
